--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
     - nodefaults
 
 dependencies: 
-    - jupyterlab
+    - jupyterlab >=2.2.0,<3.0.0a0
     - notebook
     - numpy 
     - scipy 
